Ensured that all references in docs and code indicate that increasing y is North

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -325,7 +325,6 @@ class SpaceTimeCube:
         Return the scalar value at index (t,y,x) by translating these cube coordinates
         to base coordinates and looking up the value within the base data.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative.
         """
         # Select value by spatio-temporal coordinate
@@ -340,7 +339,6 @@ class SpaceTimeCube:
         coordinates to base coordinates, looking up the array slice within the base data,
         and expanding it back to the cube_shape resolution.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative.
         NOTE: Range indices may include one or more None values and
               provide (inclusion, exclusion) semantics like Python array slice notation.
@@ -373,7 +371,6 @@ class SpaceTimeCube:
         cube coordinates to base coordinates, looking up the array slice within the base
         data, and expanding it back to the cube_shape resolution.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative.
         NOTE: Range indices may include one or more None values and
               provide (inclusion, exclusion) semantics like Python array slice notation.
@@ -416,7 +413,6 @@ class SpaceTimeCube:
         these cube coordinates to base coordinates, looking up the array slice within the
         base data, and expanding it back to the cube_shape resolution.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative.
         NOTE: Range indices may include one or more None values and
               provide (inclusion, exclusion) semantics like Python array slice notation.
@@ -615,7 +611,6 @@ class LazySpaceTimeCube:
         to cache and subcube coordinates, loading the matching subcube into the cache grid
         if not already present, and looking up the value within this subcube.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative provided that your load_subcube function can handle
               negative indices in its cache_index argument.
         """
@@ -634,7 +629,6 @@ class LazySpaceTimeCube:
         the cache grid if not already present, looking up the array slices within each
         subcube, and merging them together into a single 1D array.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative provided that your load_subcube function can handle
               negative indices in its cache_index argument.
         NOTE: Range indices may include one or more None values and
@@ -671,7 +665,6 @@ class LazySpaceTimeCube:
         into the cache grid if not already present, looking up the array slices within each
         subcube, and merging them together into a single 2D array.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative provided that your load_subcube function can handle
               negative indices in its cache_index argument.
         NOTE: Range indices may include one or more None values and
@@ -713,7 +706,6 @@ class LazySpaceTimeCube:
         subcubes into the cache grid if not already present, looking up the array slices
         within each subcube, and merging them together into a single 3D array.
 
-        NOTE: (t,y,x) = (0,0,0) is the upper-left corner of the array in the first timestep.
         NOTE: Indices may be negative provided that your load_subcube function can handle
               negative indices in its cache_index argument.
         NOTE: Range indices may include one or more None values and
@@ -6001,15 +5993,23 @@ def identify_frontier_cells(phi_matrix, tracked_cells=None):
     if tracked_cells:
         for (y, x) in tracked_cells:
             # Compare (north, south) and (east, west) neighboring cell pairs for opposite phi signs
-            if (opposite_phi_signs(phi_matrix, max(0, y-1), x, min(rows-1, y+1), x) or
-                opposite_phi_signs(phi_matrix, y, min(cols-1, x+1), y, max(0, x-1))):
+            north_y = min(y+1, rows-1)
+            south_y = max(y-1, 0)
+            east_x  = min(x+1, cols-1)
+            west_x  = max(x-1, 0)
+            if (opposite_phi_signs(phi_matrix, north_y, x, south_y, x) or
+                opposite_phi_signs(phi_matrix, y, east_x, y, west_x)):
                 frontier_cells.add((y, x))
     else:
         for y in range(rows):
             for x in range(cols):
                 # Compare (north, south) and (east, west) neighboring cell pairs for opposite phi signs
-                if (opposite_phi_signs(phi_matrix, max(0, y-1), x, min(rows-1, y+1), x) or
-                    opposite_phi_signs(phi_matrix, y, min(cols-1, x+1), y, max(0, x-1))):
+                north_y = min(y+1, rows-1)
+                south_y = max(y-1, 0)
+                east_x  = min(x+1, cols-1)
+                west_x  = max(x-1, 0)
+                if (opposite_phi_signs(phi_matrix, north_y, x, south_y, x) or
+                    opposite_phi_signs(phi_matrix, y, east_x, y, west_x)):
                     frontier_cells.add((y, x))
     return frontier_cells
 
