--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6469,14 +6469,17 @@ output_matrices = fire_spread_results["output_matrices"] # updated 2D arrays (mu
 # Display summary statistics of our fire spread results
 #============================================================================================
 
-def get_array_stats(array):
-    return {
-        "Min"  : np.min(array),
-        "Max"  : np.max(array),
-        "Mean" : np.mean(array),
-        "Stdev": np.std(array),
-    }
+# Used as a filter in get_array_stats below
+burned_cells = output_matrices["fire_type"] > 0
 
+def get_array_stats(array):
+    array_values_in_burn_scar = array[burned_cells]
+    return {
+        "Min"  : np.min(array_values_in_burn_scar),
+        "Max"  : np.max(array_values_in_burn_scar),
+        "Mean" : np.mean(array_values_in_burn_scar),
+        "Stdev": np.std(array_values_in_burn_scar),
+    }
 
 print("Fire Behavior from Day 2 @ 10:30am - Day 2 @ 6:30pm Spreading from Coordinate (50,50)\n" + "=" * 100)
 
@@ -6513,25 +6516,28 @@ Stop Time: 2550.0 (minutes)
 Stop Condition: max duration reached
 
 Phi (phi <= 0: burned, phi > 0: unburned
-{'Min': -0.92562664, 'Max': 1.0, 'Mean': 0.90606785, 'Stdev': 0.3891296}
+{'Min': -0.92403376,
+ 'Max': -0.027144847,
+ 'Mean': -0.74992913,
+ 'Stdev': 0.21444972}
 
 Fire Type (0=unburned, 1=surface, 2=passive_crown, 3=active_crown)
-{'Min': 0, 'Max': 1, 'Mean': 0.0503, 'Stdev': 0.21856328602947023}
+{'Min': 1, 'Max': 1, 'Mean': 1.0, 'Stdev': 0.0}
 
 Spread Rate (m/min)
-{'Min': 0.0, 'Max': 2.2964673, 'Mean': 0.060979664, 'Stdev': 0.3007719}
+{'Min': 0.16077071, 'Max': 2.2964673, 'Mean': 1.2123194, 'Stdev': 0.6345803}
 
 Spread Direction (degrees clockwise from North)
-{'Min': 0.0, 'Max': 359.1836, 'Mean': 9.633849, 'Stdev': 49.50558}
+{'Min': 0.06370052, 'Max': 359.1836, 'Mean': 191.5278, 'Stdev': 117.83867}
 
 Fireline Intensity (kW/m)
-{'Min': 0.0, 'Max': 32.52824, 'Mean': 0.8637446, 'Stdev': 4.2602744}
+{'Min': 2.277232, 'Max': 32.52824, 'Mean': 17.171862, 'Stdev': 8.988494}
 
 Flame Length (meters)
-{'Min': 0.0, 'Max': 0.38439327, 'Mean': 0.0138476025, 'Stdev': 0.06239403}
+{'Min': 0.11312101, 'Max': 0.38439327, 'Mean': 0.2753003, 'Stdev': 0.07360656}
 
 Time of Arrival (minutes)
-{'Min': -1.0, 'Max': 2548.0952, 'Mean': 119.04421, 'Stdev': 522.27325}
+{'Min': 2081.8513, 'Max': 2548.0952, 'Mean': 2385.5647, 'Stdev': 116.835556}
 #+end_example
 
 *** How to Create Images of Fire Behavior Outputs
